--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
+html,body{
+  height:100%;
+}
+
+.container{
+  height:100%;
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+  
+  
+}
+
 .board{
-  height:300px;
-  width:300px;
   display:grid;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
 button{
-  height:100px;
-  width:100px;
+  height:200px;
+  width:200px;
 }
 
